Social media icon bug fixed
Social media buttons we too close to the logo on mobile.

--- a/src/styling/components/footer/utils/SocialMedia.css
+++ b/src/styling/components/footer/utils/SocialMedia.css
@@ -15,6 +15,11 @@
     color: white;
     z-index: 100;
 }
+@media only screen and (max-width: 1000px) {
+    .socialMedia {
+        margin-top: -15px;
+    }
+}
 @media only screen and (max-height: 400px) {
     .socialMedia {
       z-index: 100;
